--- a/Assignment 1/Assignment 1.vbproj
+++ b/Assignment 1/Assignment 1.vbproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{77E4AC08-B18D-4CF8-A95D-8019AD226375}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <StartupObject>Assignment_1.Console</StartupObject>
+    <StartupObject>Assignment_1.Assign1</StartupObject>
     <RootNamespace>Assignment_1</RootNamespace>
     <AssemblyName>Assignment 1</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -66,7 +66,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Console.vb" />
+    <Compile Include="Assign1.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -102,6 +102,12 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Database\Database.vbproj">
+      <Project>{57cac3c7-651b-46d6-98d8-b6457eb4ada4}</Project>
+      <Name>Database</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
