More console changes
Added console functionality for viewing the lists
Added functionality to load/save the files
Added initial empty copies of the CSV files

--- a/Database/Database.vbproj
+++ b/Database/Database.vbproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Address.vb" />
+    <Compile Include="OrderBook.vb" />
     <Compile Include="Records\Customer.vb" />
     <Compile Include="Records\Order.vb" />
     <Compile Include="Records\OrderItem.vb" />
