Fixed last bit of conflict

--- a/OrderTestLib/TestingLib.vbproj
+++ b/OrderTestLib/TestingLib.vbproj
@@ -80,6 +80,7 @@
     <Import Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomerTest.vb" />
     <Compile Include="OrderTest.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
